# oas3-gen

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  GEMINI.md  LICENSE.md  README.md  agent.sb  deny.toml  flake.nix  release-plz.toml  rustfmt.toml
.claude/commands/: audit-tests.md  commit-message.md  composable-fragments.md  improve-code.md  improve-tests.md  rebuild-codebase.md  refactor.md  restructure-module.md  review-staged.md
.claude/subagents/: cli-developer.md  code-reviewer.md  documentation-expert.md  performance-engineer.md  test-automator.md
.github/workflows/: Lint.yml  book.yml  release-plz.yml
book/: book.toml
book/src/: SUMMARY.md  builders.md  code-generation.md  introduction.md
crates/oas3-gen/: Cargo.toml
crates/oas3-gen-support/: Cargo.toml
crates/oas3-gen-support/src/: event_stream.rs  lib.rs
crates/oas3-gen/examples/: generated_types2.rs
crates/oas3-gen/fixtures/: Lizard.json  all-the-components.json  basic_api.json  content_types.json  enum_deduplication.json  event_stream.json  implicit_union.json  integer_path_param.json  intersection_union.json  oas_3_1_2_pet_benchmark.json  operation_filtering.json  path_level_params.json  petstore.json  relaxed_enum_deduplication.json  strict_union.json  undeclared_path_params.json  union_serde.json  untyped_parameter.json
crates/oas3-gen/fixtures/all_the_components/: client.rs  mod.rs  types.rs
crates/oas3-gen/fixtures/event_stream/: client.rs  mod.rs  types.rs
crates/oas3-gen/fixtures/intersection_union/: client.rs  mod.rs  types.rs
crates/oas3-gen/fixtures/petstore/: client.rs  mod.rs  types.rs
crates/oas3-gen/fixtures/petstore_builders/: client.rs  mod.rs  types.rs
crates/oas3-gen/fixtures/petstore_server/: mod.rs  server.rs  types.rs
crates/oas3-gen/fixtures/strict_union/: client.rs  mod.rs  types.rs
crates/oas3-gen/fixtures/union_serde/: client.rs  mod.rs  types.rs
crates/oas3-gen/src/: main.rs  reserved.rs
crates/oas3-gen/src/generator/: ast.rs  code_generator.rs  metrics.rs  mod.rs  mode.rs  operation_converter.rs  operation_registry.rs  orchestrator.rs  schema_converter.rs  schema_graph.rs  schema_registry.rs  utils.rs
crates/oas3-gen/src/generator/analyzer/: dependency_graph.rs  errors.rs  mod.rs  stats.rs  tests.rs  transforms.rs  type_graph.rs  type_usage.rs
crates/oas3-gen/src/generator/analyzer/tests/: error_tests.rs  mod.rs  transform_tests.rs  type_usage_tests.rs
crates/oas3-gen/src/generator/ast/: bon_attrs.rs  client.rs  constants.rs  derives.rs  documentation.rs  fields.rs  links.rs  lints.rs  metadata.rs  mod.rs  outer_attrs.rs  parsed_path.rs  serde_attrs.rs  server.rs  status_codes.rs  tokens.rs  types.rs  validation_attrs.rs
crates/oas3-gen/src/generator/ast/tests/: content_category.rs  documentation.rs  mod.rs  outer_attrs.rs  parsed_path.rs  status_codes.rs  types.rs  validation_attrs.rs
crates/oas3-gen/src/generator/codegen/: attributes.rs  client.rs  coercion.rs  constants.rs  derives.rs  enums.rs  error_impls.rs  headers.rs  http.rs  metadata.rs  methods.rs  mod.rs  mod_file.rs  server.rs  structs.rs  type_aliases.rs  types.rs
crates/oas3-gen/src/generator/codegen/client/: methods.rs  mod.rs
crates/oas3-gen/src/generator/codegen/tests/: client.rs  coercion_tests.rs  constants_tests.rs  enum_tests.rs  error_impl_tests.rs  mod.rs  module_uses_tests.rs  struct_tests.rs  type_alias_tests.rs
crates/oas3-gen/src/generator/converter/: cache.rs  common.rs  constants.rs  discriminator.rs  enums.rs  error.rs  field_optionality.rs  field_processor.rs  fields.rs  hashing.rs  inline_resolver.rs  inline_scanner.rs  links.rs  metadata.rs  method_generator.rs  methods.rs  mod.rs  naming.rs  operations.rs  parameters.rs  path_renderer.rs  relaxed_enum.rs  relaxed_enum_builder.rs  requests.rs  responses.rs  runtime_expression.rs  status_codes.rs  string_enum_optimizer.rs  struct_summaries.rs  structs.rs  type_resolver.rs  type_usage_recorder.rs  union.rs  union_converter.rs  union_types.rs  unions.rs  utils.rs  value_enums.rs  variants.rs
crates/oas3-gen/src/generator/converter/tests/: cache.rs  common.rs  common_tests.rs  enums.rs  field_optionality.rs  fields.rs  helper_tests.rs  implicit_dependencies.rs  inline_objects.rs  intersection_union.rs  links.rs  metadata_tests.rs  mod.rs  naming.rs  operations.rs  path_renderer.rs  structs.rs  support.rs  type_aliases.rs  type_resolution.rs
crates/oas3-gen/src/generator/naming/: constants.rs  identifiers.rs  inference.rs  mod.rs  name_index.rs  operations.rs  responses.rs  status_codes.rs  variants.rs
crates/oas3-gen/src/generator/naming/tests/: identifiers.rs  inference.rs  mod.rs  operations.rs  responses.rs  variants.rs
crates/oas3-gen/src/generator/postprocess/: dependency_graph.rs  mod.rs  response_enum.rs  serde_usage.rs  uses.rs  validation.rs
crates/oas3-gen/src/generator/postprocess/tests/: mod.rs  transform_tests.rs  type_usage_tests.rs
crates/oas3-gen/src/generator/tests/: mod.rs  operation_registry.rs  orchestrator.rs  path_level_params.rs  schema_graph.rs  support.rs  undeclared_path_params.rs  untyped_params.rs
crates/oas3-gen/src/naming/: inference.rs
crates/oas3-gen/src/naming/tests/: identifiers.rs  inference.rs
crates/oas3-gen/src/tests/: common.rs  event_stream.rs  intersection_union.rs  mod.rs  petstore.rs  petstore_server.rs  strict_union.rs  union_serde.rs
crates/oas3-gen/src/ui/: cli.rs  colors.rs  mod.rs
crates/oas3-gen/src/ui/commands/: generate.rs  list.rs  mod.rs
crates/oas3-gen/src/utils/: mod.rs  refs.rs  schema_ext.rs  spec.rs  text.rs
crates/oas3-gen/tests/: generated_types_test.rs
docs/: architecture.md  code-fragments.md  coding-standards.md  commands.md  links.md  subagents.md  testing.md
src/: generator.rs  main.rs  reserved.rs
src/generator/: ast.rs  code_generator.rs  mod.rs  operation_converter.rs  orchestrator.rs  schema_converter.rs  schema_graph.rs  utils.rs
tests/: serde_round_trip.rs
