[workspace]
resolver = "3"
members = ["crates/*"]

[workspace.package]
version = "0.8.0"
authors = ["Matthew Jarjoura <eklipse2k8>"]
categories = [
  "command-line-utilities",
  "development-tools",
  "web-programming::http-client",
]
description = "A rust type generator for OpenAPI v3.1.x specification."
edition = "2024"
keywords = ["oas3", "json", "openapi", "rust", "generator"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/eklipse2k8/oas3-gen"
rust-version = "1.89"

[profile.release]
codegen-units = 1
debug = true
debug-assertions = false
lto = "fat"
opt-level = 3
split-debuginfo = "packed"
strip = "symbols"

[profile.dev]
debug = true
debug-assertions = false
opt-level = 0
panic = "unwind"
split-debuginfo = "unpacked"

[workspace.dependencies]
# Workspace Members
oas3-gen-support = { path = "crates/oas3-gen-support", version = "0.8.0" }

# External Dependencies
any_ascii = { version = "0.3" }
anyhow = { version = "1.0" }
better_default = { version = "1.0" }
chrono = { version = ">=0.4.20", default-features = false, features = ["std", "clock", "serde"] }
clap = { version = "4.5", features = ["derive"] }
crossterm = { version = "0.29", default-features = false }
http = { version = "1.3" }
indexmap = { version = "2.12", features = ["serde"] }
inflections = { version = "1.1" }
oas3 = { version = "0.19" }
percent-encoding = { version = "2.3" }
prettyplease = { version = "0.2" }
proc-macro2 = { version = "1.0" }
quote = { version = "1.0" }
regex = { version = "1.11" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
serde_with = { version = "3.15", features = ["chrono"] }
syn = { version = "2.0", features = ["full", "parsing"] }
tempfile = { version = "3.14" }
tokio = { version = "1.48", default-features = false, features = ["rt-multi-thread", "fs", "macros"] }
uuid = { version = "1.18", features = ["serde"] }
validator = { version = "0.20" }
