[package]
name = "oas3-gen-support"
version.workspace = true
authors.workspace = true
categories.workspace = true
description.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
anyhow.workspace = true
better_default.workspace = true
chrono.workspace = true
http.workspace = true
indexmap.workspace = true
oas3.workspace = true
percent-encoding.workspace = true
prettyplease.workspace = true
proc-macro2.workspace = true
quote.workspace = true
regex.workspace = true
reqwest = { workspace = true, features = ["json"] }
serde_json.workspace = true
serde_path_to_error.workspace = true
serde_plain.workspace = true
serde_with.workspace = true
serde.workspace = true
syn.workspace = true
thiserror.workspace = true
uuid.workspace = true
validator.workspace = true
