[package]
name = "oas3-gen-support"
version.workspace = true
authors.workspace = true
categories.workspace = true
description.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
anyhow.workspace = true
better_default.workspace = true
chrono.workspace = true
futures-core = "0.3"
http.workspace = true
indexmap.workspace = true
oas3.workspace = true
prettyplease.workspace = true
proc-macro2.workspace = true
quick-xml.workspace = true
quote.workspace = true
regex.workspace = true
reqwest = { workspace = true, features = ["json", "stream"] }
eventsource-stream.workspace = true
serde_json.workspace = true
serde_path_to_error.workspace = true
serde_with.workspace = true
serde.workspace = true
syn.workspace = true
thiserror.workspace = true
uuid.workspace = true
validator.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
futures = "0.3"
