[package]
name = "oas3-gen-support"
version.workspace = true
authors.workspace = true
categories.workspace = true
description.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["rlib", "cdylib"]

[features]
default = ["quick-xml", "reqwest", "eventsource"]

reqwest = ["dep:reqwest"]

eventsource = ["reqwest", "reqwest/stream", "dep:eventsource-stream"]

quick-xml = ["dep:quick-xml", "quick-xml/serde", "quick-xml/serialize"]


[dependencies]
better_default.workspace = true
bon.workspace = true
chrono.workspace = true
eventsource-stream = { workspace = true, optional = true }
futures-core.workspace = true
http.workspace = true
quick-xml = { workspace = true, optional = true }
reqwest = { workspace = true, optional = true }
serde_json.workspace = true
serde_path_to_error.workspace = true
serde_with.workspace = true
serde.workspace = true
thiserror.workspace = true
validator.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
futures.workspace = true
