[package]
name = "oas3-gen"
version.workspace = true
authors.workspace = true
categories.workspace = true
description.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
any_ascii.workspace = true
anyhow.workspace = true
clap.workspace = true
crossterm.workspace = true
http.workspace = true
inflections.workspace = true
oas3.workspace = true
prettyplease.workspace = true
proc-macro2.workspace = true
quote.workspace = true
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
syn.workspace = true
tokio.workspace = true
percent-encoding.workspace = true

[dev-dependencies]
chrono.workspace = true
indexmap.workspace = true
oas3-gen-support.workspace = true
tempfile.workspace = true
uuid.workspace = true
validator = { workspace = true, features = ["derive"] }
