[package]
name = "oas3-gen"
version.workspace = true
authors.workspace = true
categories.workspace = true
description.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true

[features]
default = []
mdformat = []

[dependencies]
any_ascii.workspace = true
anyhow.workspace = true
blake3.workspace = true
cfg-if.workspace = true
chrono.workspace = true
clap.workspace = true
comfy-table.workspace = true
crossterm.workspace = true
cruet.workspace = true
derive_builder.workspace = true
fmmap.workspace = true
http.workspace = true
indexmap.workspace = true
inflections.workspace = true
json-canon.workspace = true
mediatype.workspace = true
num-format.workspace = true
oas3.workspace = true
percent-encoding.workspace = true
prettyplease.workspace = true
proc-macro2.workspace = true
quote.workspace = true
regex.workspace = true
serde_json.workspace = true
serde_plain.workspace = true
serde.workspace = true
string_cache.workspace = true
strum.workspace = true
syn.workspace = true
tokio.workspace = true

[dev-dependencies]
oas3-gen-support.workspace = true
reqwest = { workspace = true, features = ["json", "multipart", "native-tls-alpn", "stream"] }
reqwest-eventsource.workspace = true
serde_with.workspace = true
tempfile.workspace = true
uuid.workspace = true
validator = { workspace = true, features = ["derive"] }
